--- a/bio.html
+++ b/bio.html
@@ -5,9 +5,11 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
-        <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
-        <nav id="navbar">
-        </nav>
+        <div class="title-container">
+            <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
+            <nav id="navbar">
+            </nav>
+        </div>
         <!-- <div id="spacer"></div> -->
         <div id="bio-container">
             <!-- <div class="bio-spacer"></div> -->
@@ -24,6 +26,7 @@
                 </div>
             </div>
             <div id="picture">
+                <!-- THIS WILL BE A PICTURE OF ME EVENTUALLY -->
                 <img src="cool.jpg"></img>
             </div>
             <!-- <div class="bio-spacer"></div> -->
