added new styling and additions to site functionality

--- a/bio.html
+++ b/bio.html
@@ -15,14 +15,19 @@
             <!-- <div class="bio-spacer"></div> -->
             <div id="about-me">
                 <div id="about-top">
-                    My name is Zachery Peterson and I am a web design and developer.
-                    I will have a degree in Web Design and Development from Neumont College of Computer Science.
-                    I have an eye for design and love to create.
+                    <h2 class="basic-info-title">Basic Info: </h2>
+                    <pre class="basic-info">
+    My name is Zachery Peterson and I am a web design and developer.  I will have a degree in Web Design and Development from Neumont College of Computer Science.  I have an eye for design and love to create.  I am 21 years old and am currently finishing up schooling.  I love movies and music.
+                    </pre>
                 </div>
                 <div class="about-spacer"></div>
                 <div id="about-bot">
-                    I am 21 years old and am currently finishing up schooling.
-                    I love movies and music.
+                    <h2 class="contact-info">Contact Info: </h2>
+                    <ul class="contact-list">
+                        <!-- <li class="contact-list-item">LinkedIn: <a></a></li> -->
+                        <li class="contact-list-item">Phone:  612-296-7640</li>
+                        <li class="contact-list-item">Email:  zachrp2296@gmail.com</li>
+                    </ul>
                 </div>
             </div>
             <div id="picture">
