added a picture of me instead of a meme

--- a/bio.html
+++ b/bio.html
@@ -32,7 +32,8 @@
             </div>
             <div id="picture">
                 <!-- THIS WILL BE A PICTURE OF ME EVENTUALLY -->
-                <img src="cool.jpg"></img>
+                <!-- <img src="cool.jpg"></img> -->
+                <img src="me2.jpg"></img>
             </div>
             <!-- <div class="bio-spacer"></div> -->
         </div>
