--- a/bio.html
+++ b/bio.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <div class="title-container">
+            <div class="title-logo-container">
+                <img class="title-logo" src="logo.png"></img>
+            </div>
             <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
-            <nav id="navbar">
-            </nav>
+            <nav id="navbar"></nav>
         </div>
         <!-- <div id="spacer"></div> -->
         <div id="bio-container">
@@ -31,11 +33,8 @@
                 </div>
             </div>
             <div id="picture">
-                <!-- THIS WILL BE A PICTURE OF ME EVENTUALLY -->
-                <!-- <img src="cool.jpg"></img> -->
                 <img src="me2.jpg"></img>
             </div>
-            <!-- <div class="bio-spacer"></div> -->
         </div>
     </body>
     <footer>
