--- a/bio.html
+++ b/bio.html
@@ -9,31 +9,18 @@
             <div class="title-logo-container">
                 <img class="title-logo" src="logo.png"></img>
             </div>
-            <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
+            <h1 id="main-title">Zachery Peterson - Web Developer/Designer</h1>
             <nav id="navbar"></nav>
         </div>
-        <!-- <div id="spacer"></div> -->
         <div id="bio-container">
-            <!-- <div class="bio-spacer"></div> -->
             <div id="about-me">
-                <div id="about-top">
-                    <h2 class="basic-info-title">Basic Info: </h2>
-                    <pre class="basic-info">
-    My name is Zachery Peterson and I am a web design and developer.  I will have a degree in Web Design and Development from Neumont College of Computer Science.  I have an eye for design and love to create.  I am 21 years old and am currently finishing up schooling.  I love movies and music.
-                    </pre>
-                </div>
-                <div class="about-spacer"></div>
-                <div id="about-bot">
-                    <h2 class="contact-info">Contact Info: </h2>
-                    <ul class="contact-list">
-                        <!-- <li class="contact-list-item">LinkedIn: <a></a></li> -->
-                        <li class="contact-list-item">Phone:  612-296-7640</li>
-                        <li class="contact-list-item">Email:  zachrp2296@gmail.com</li>
-                    </ul>
-                </div>
+                <h2 class="basic-info-title">About Me: </h2>
+                <pre class="basic-info">
+My name is Zachery Peterson and I am a web design and developer.  I will have a degree in Web Design and Development from Neumont College of Computer Science.  I have an eye for design and love to create.  I am 21 years old and am currently finishing up schooling.  I love movies and music.
+                </pre>
             </div>
             <div id="picture">
-                <img src="me2.jpg"></img>
+                <img src="ZachP/ZachP02.JPG" width="280" height="420"></img>
             </div>
         </div>
     </body>
